@@ -76,6 +76,7 @@
 #define MAKUO_FLAG_FMARK  8
 #define MAKUO_FLAG_DRYRUN 16
 #define MAKUO_FLAG_RECURS 32
+#define MAKUO_FLAG_SYNC   64
 
 /*----- sendstatus -----*/
 #define MAKUO_SENDSTATE_STAT       0  /* 更新確認待 */
@@ -86,6 +87,7 @@
 #define MAKUO_SENDSTATE_LAST       5  /* 送信完了   */
 #define MAKUO_SENDSTATE_ERROR      6  /* エラー発生 */
 #define MAKUO_SENDSTATE_BREAK      7  /* 送信中断   */
+#define MAKUO_SENDSTATE_DELETE     8  /* 削除要求   */
 
 /*----- recvstatus -----*/
 #define MAKUO_RECVSTATE_NONE       0
